--- a/web_development/day3/styles/style.css
+++ b/web_development/day3/styles/style.css
@@ -115,7 +115,6 @@ body {
   height: auto;
 }
 
-
 .right-text {
   font-size: 20px;
   line-height: 30px;
@@ -126,7 +125,6 @@ body {
   width: 30%;
   height: auto;
 }
-
 
 .section3 {
   margin-top: 7%;
@@ -145,9 +143,10 @@ body {
   box-shadow: 0 8px 2px -2px #16151530;
 }
 
-  .picture1, .picture2, .picture3 {
-    width: 280px;
-  }
+.picture1, .picture2, .picture3 {
+  width: 280px;
+}
+
 ol {
   line-height: 40px;
   padding-left: 40px;
@@ -169,9 +168,7 @@ ol {
   height: auto;
 }
 
-
-.top-text,
-.middle {
+.top-text, .middle {
   line-height: 26px;
   width: 55%;
   height: auto;
@@ -200,7 +197,6 @@ a {
 h3::before {
   content: "Get";
   color: #FFC100;
-
 }
 
 hr {
@@ -245,65 +241,4 @@ hr {
 .third_color {
   border-left-color: #0DD868;
   border-right-color: #0DD868;
-}
-
-
-@media screen and (max-width: 1049px) {
-  #text3, #text4 {
-      font-size:19px;
-      line-height: 20px;
-      width: 100%;
-      height: auto;
-    }
-}
-
-@media screen and (max-width: 1049px) {
-   #text4 {
-  flex-wrap: wrap;
-    }
-}
-
-@media screen and (max-width: 750px) {
-  .section3 {
- flex-direction: column;
-   }
-   #text2 {
-    font-size: 70px;
-
-  }
-  #text1 {
-    font-size: 30px;
-  }
-  
-  button {
-    font-size: 18px;
-  
-  }
-}
-
-@media screen and (max-width: 820px) {
-  .section3 {
- flex-direction: column;
- width: 400px;
-   }
-   .picture1, .picture2, .picture3 {
-    width: 380px;
-   }
-   .middle {
-    width: 100%;
-   }
-}
-@media screen and (max-width: 485px) {
-  .section2 {
- flex-direction: column;
-  }
- .section3 {
-  width: 80%;
- }
-   .picture1, .picture2, .picture3 {
-    width: 98%;
-   }
-   a {
-    font-size: 15px;
-   }
 }
